--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+pymysql://root:12345678@localhost/fasttest
+sqlalchemy.url = mysql+pymysql://root:Password#123@localhost/fasttest
 
 
 [post_write_hooks]
